# hello-world

./: Hello.hs  hello-world.cabal  stack.yaml
