name:                hello-world
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psachin/hello-world#readme
license:             BSD3
license-file:        LICENSE
author:              Sachin Patil
maintainer:          psachin@redhat.com
copyright:           2017 Sachin Patil
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hello-world
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
